--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,8 +61,11 @@ dependencies {
     // HTML parsing
     compile 'org.jsoup:jsoup:1.7.3'
 
-    // RSS
+    // RSS - will use git submodule because the standard jar packaging
+    // will raise duplicateFileException
     compile 'com.rometools:rome:1.7.1'
+    compile 'com.rometools:rome-modules:1.7.1'
+
     // For better fetching
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
 
