--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ buildscript {
     }
 }
 
+task wrapper(type: Wrapper) {
+  gradleVersion = '3.4.1'
+}
+
 allprojects {
     repositories {
         jcenter()
