--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ apply plugin: 'com.android.application'
 android {
     buildToolsVersion '25.0.2'
 
+    lintOptions {
+        abortOnError false
+    }
+
     defaultConfig {
         applicationId "com.nononsenseapps.feeder"
         versionCode 4
@@ -56,10 +60,11 @@ dependencies {
     compile 'org.ccil.cowan.tagsoup:tagsoup:1.2.1'
 
     // RSS
-    compile 'com.rometools:rome:1.7.1'
-    // will use jar from git submodule because the standard jar packaging
-    // will raise duplicateFileException and android studio doesn't support composite build yet
-    //compile 'com.rometools:rome-modules:1.7.1'
+    // uses submodule because the standard jar packaging will raise duplicateFileException
+    // sadly android studio doesn't support composite build in gradle yet
+    compile project(":rome/rome")
+    compile project(":rome/rome-modules")
+
 
     // For better fetching
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
