--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,1 @@
-include ':app', ':rome/rome-utils', ':rome/rome', ':rome/rome-modules'
-
-// idea doesn't support composite builds yet
-//includeBuild 'rome'
+include 'app'
