--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,110 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nononsenseapps.feeder">
+          package="com.nononsenseapps.feeder">
 
-    <!-- Import export feeds -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!-- For syncing -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
-    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+  <!-- Import export feeds -->
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <!-- For syncing -->
+  <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
+  <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+  <application
+      android:allowBackup="true"
+      android:icon="@mipmap/ic_launcher"
+      android:label="@string/app_name"
+      android:theme="@style/AppTheme">
+    <activity
+        android:name=".ui.FeedActivity"
         android:label="@string/app_name"
+        android:theme="@style/FeedsTheme">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
+    <activity
+        android:name=".ui.DebugLogActivity"
+        android:label="@string/app_name"
+        android:parentActivityName=".ui.FeedActivity"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".ui.FeedActivity"
-            android:label="@string/app_name"
-            android:theme="@style/FeedsTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+      >
+      <meta-data
+          android:name="android.support.PARENT_ACTIVITY"
+          android:value="com.nononsenseapps.feeder.ui.FeedActivity"/>
+    </activity>
+    <activity
+        android:name=".ui.ReaderActivity"
+        android:label="@string/app_name"
+        android:parentActivityName=".ui.FeedActivity"
+        android:theme="@style/ReaderTheme">
+      >
+      <meta-data
+          android:name="android.support.PARENT_ACTIVITY"
+          android:value="com.nononsenseapps.feeder.ui.FeedActivity"/>
+    </activity>
+    <activity
+        android:name=".ui.EditFeedActivity"
+        android:label="@string/title_activity_edit_feed"
+        android:parentActivityName=".ui.FeedActivity"
+        android:theme="@style/EditFeedTheme"
+        android:windowSoftInputMode="adjustResize|stateVisible">
+      <meta-data
+          android:name="android.support.PARENT_ACTIVITY"
+          android:value="com.nononsenseapps.feeder.ui.FeedActivity"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".ui.DebugLogActivity"
-            android:label="@string/app_name"
-            android:parentActivityName=".ui.FeedActivity"
-            android:theme="@style/AppTheme">
-            >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.nononsenseapps.feeder.ui.FeedActivity" />
-        </activity>
-        <activity
-            android:name=".ui.ReaderActivity"
-            android:label="@string/app_name"
-            android:parentActivityName=".ui.FeedActivity"
-            android:theme="@style/ReaderTheme">
-            >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.nononsenseapps.feeder.ui.FeedActivity" />
-        </activity>
-        <activity
-            android:name=".ui.EditFeedActivity"
-            android:label="@string/title_activity_edit_feed"
-            android:parentActivityName=".ui.FeedActivity"
-            android:theme="@style/EditFeedTheme"
-            android:windowSoftInputMode="adjustResize|stateVisible">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.nononsenseapps.feeder.ui.FeedActivity" />
+      <intent-filter>
+        <action android:name="android.intent.action.SEND"/>
 
-            <intent-filter>
-                <action android:name="android.intent.action.SEND" />
+        <category android:name="android.intent.category.DEFAULT"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="http"/>
+      </intent-filter>
+      <intent-filter>
+        <action android:name="android.intent.action.SEND"/>
 
-                <data android:scheme="http" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.SEND" />
+        <category android:name="android.intent.category.DEFAULT"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+        <data android:mimeType="text/*"/>
+      </intent-filter>
+    </activity>
 
-                <data android:mimeType="text/*" />
-            </intent-filter>
-        </activity>
+    <provider
+        android:name=".db.RssContentProvider"
+        android:authorities="com.nononsenseapps.feeder.provider"
+        android:enabled="true"
+        android:exported="false"
+        android:label="@string/app_name"/>
 
-        <provider
-            android:name=".db.RssContentProvider"
-            android:authorities="com.nononsenseapps.feeder.provider"
-            android:enabled="true"
-            android:exported="false"
-            android:label="@string/app_name"/>
+    <service
+        android:name=".model.RssSyncAdapterService"
+        android:enabled="true"
+        android:exported="true">
+      <intent-filter>
+        <action android:name="android.content.SyncAdapter"/>
+      </intent-filter>
 
-        <service
-            android:name=".model.RssSyncAdapterService"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.content.SyncAdapter" />
-            </intent-filter>
+      <meta-data
+          android:name="android.content.SyncAdapter"
+          android:resource="@xml/syncadapter"/>
+    </service>
+    <service
+        android:name=".db.RssDatabaseService"
+        android:exported="false"/>
+    <service
+        android:name=".db.AccountService"
+        android:enabled="true"
+        android:exported="true">
+      <intent-filter>
+        <action android:name="android.accounts.AccountAuthenticator"/>
+      </intent-filter>
 
-            <meta-data
-                android:name="android.content.SyncAdapter"
-                android:resource="@xml/syncadapter" />
-        </service>
-        <service
-            android:name=".db.RssDatabaseService"
-            android:exported="false"/>
-        <service
-            android:name=".db.AccountService"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.accounts.AccountAuthenticator" />
-            </intent-filter>
-            <meta-data android:name="android.accounts.AccountAuthenticator"
-                android:resource="@xml/authenticator" />
-        </service>
-    </application>
+      <meta-data
+          android:name="android.accounts.AccountAuthenticator"
+          android:resource="@xml/authenticator"/>
+    </service>
+
+    <activity
+        android:name=".ui.SettingsActivity"
+        android:label="@string/title_activity_settings"
+        android:parentActivityName=".ui.FeedActivity">
+      <meta-data
+          android:name="android.support.PARENT_ACTIVITY"
+          android:value="com.nononsenseapps.feeder.ui.FeedActivity"/>
+    </activity>
+  </application>
 
 </manifest>
