--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
   buildToolsVersion '25.0.2'
@@ -26,6 +27,10 @@ android {
     }
   }
 
+  sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
+  }
+
   testOptions {
     unitTests.returnDefaultValues = true
   }
@@ -37,6 +42,8 @@ android {
 }
 
 dependencies {
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
   compile 'com.android.support:recyclerview-v7:25.2.0'
   compile 'com.android.support:support-v4:25.2.0'
   compile 'com.android.support:appcompat-v7:25.2.0'
