Fail on lint to prevent future errors like this

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,8 @@ android {
   buildToolsVersion '25.0.2'
 
   lintOptions {
-    abortOnError false
+    abortOnError true
+    disable "MissingTranslation"
   }
 
   defaultConfig {
