--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
     compileSdkVersion 25
     minSdkVersion 18
     targetSdkVersion 25
+
+    // For espresso tests
+    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
 
   buildTypes {
@@ -66,4 +69,15 @@ dependencies {
   // tests
   testCompile 'junit:junit:4.12'
   testCompile 'org.mockito:mockito-core:2.7.11'
+
+  androidTestCompile 'com.android.support:recyclerview-v7:25.3.1'
+  androidTestCompile 'com.android.support:support-v4:25.3.1'
+  androidTestCompile 'com.android.support:appcompat-v7:25.3.1'
+  androidTestCompile 'com.android.support:design:25.3.1'
+  androidTestCompile 'junit:junit:4.12'
+  androidTestCompile 'com.android.support.test:runner:0.5'
+  androidTestCompile 'com.android.support.test:rules:0.5'
+  androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+  androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2'
+  androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
 }
