--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
 
   sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
+    test.java.srcDirs += 'src/test/kotlin'
   }
 
   testOptions {
@@ -67,6 +68,8 @@ dependencies {
   compile 'com.github.bumptech.glide:glide:3.7.0'
   compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
   // tests
+  testCompile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+  testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
   testCompile 'junit:junit:4.12'
   testCompile 'org.mockito:mockito-core:2.7.11'
 
