--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ android {
 dependencies {
   compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
+  compile 'com.android.support.constraint:constraint-layout:1.0.2'
   compile 'com.android.support:recyclerview-v7:25.3.1'
   compile 'com.android.support:support-v4:25.3.1'
   compile 'com.android.support:appcompat-v7:25.3.1'
