--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ allprojects {
   repositories {
     jcenter()
     mavenCentral()
+    maven {
+      url 'https://maven.google.com'
+    }
   }
 
   tasks.withType(JavaCompile) {
