Fix crash on Import/Export OPML on SDK18
There was actually a requirement on KitKat (SDK19) for OPML actions
because they relied on the built-in picker. Added my own file picker
for use on SDK18.

Fixes #51

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
   compile 'com.android.support:support-v4:25.4.0'
   compile 'com.android.support:appcompat-v7:25.4.0'
   compile 'com.android.support:design:25.4.0'
+  // To support SDK18
+  compile 'com.nononsenseapps:filepicker:4.1.0'
   // Better times
   compile 'joda-time:joda-time:2.3'
   // HTML parsing
