--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -124,6 +124,21 @@
         <category android:name="android.intent.category.DEFAULT"/>
       </intent-filter>
     </activity>
+
+    <!-- Note that the name of this provider is hard coded into the app, so remember to change both places -->
+    <provider
+        android:name="android.support.v4.content.FileProvider"
+        android:authorities="${applicationId}.filepicker_provider"
+        android:exported="false"
+        android:grantUriPermissions="true">
+      <meta-data
+          android:name="android.support.FILE_PROVIDER_PATHS"
+          android:resource="@xml/nnf_provider_paths" />
+    </provider>
+    <activity
+        android:name=".ui.filepicker.MyFilePickerActivity"
+        android:label="@string/app_name"
+        android:theme="@style/FilePickerTheme"/>
   </application>
 
 </manifest>
