--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,50 @@
-image: spacecowboy/android-docker-builder:25
+variables:
+  ANDROID_HOME: /android
+  ANDROID_SDK_TOOLS: "25.2.5"
+  ANDROID_COMPILE_SDK: "25"
+  ANDROID_BUILD_TOOLS: "25.0.2"
 
 before_script:
+  - export PATH="${ANDROID_HOME}/tools/bin/:${ANDROID_HOME}/tools/:${ANDROID_HOME}/platform-tools/:${PATH}"
+  - export LD_LIBRARY_PATH="${ANDROID_HOME}/tools/lib64:${ANDROID_HOME}/tools/lib64/qt/lib:${LD_LIBRARY_PATH}"
+  - apt-get --quiet update --yes
+    && apt-get --quiet install --yes --no-install-recommends wget
+                                                             tar
+                                                             unzip
+                                                             lib32stdc++6
+                                                             lib32z1
+                                                             file
+                                                             mesa-utils
+                                                             pciutils
+    && rm -rf /var/lib/apt/lists/*
+  - mkdir -p ${ANDROID_HOME}
+    && wget --quiet -O ${ANDROID_HOME}/tools.zip https://dl.google.com/android/repository/tools_r${ANDROID_SDK_TOOLS}-linux.zip
+    && unzip -qq ${ANDROID_HOME}/tools.zip -d ${ANDROID_HOME}
+    && rm -f ${ANDROID_HOME}/tools.zip
+    && echo y | sdkmanager --update
+    && echo y | sdkmanager "extras;android;m2repository"
+                           "extras;google;google_play_services"
+                           "extras;google;m2repository"
+    && echo y | sdkmanager "build-tools;${ANDROID_BUILD_TOOLS}"
+                           "platforms;android-${ANDROID_COMPILE_SDK}"
   - chmod +x ./gradlew
 
-build:
+.build: &build_def
   script:
-    - ./gradlew assembleDebug
+    - ./gradlew assemble
   artifacts:
     paths:
     - app/build/outputs/
 
-test:
+.test: &test_def
   script:
     - ./gradlew check
   artifacts:
+
+build:jdk-1.8:
+  <<: *build_def
+  image: openjdk:8-jdk
+
+test:jdk-1.8:
+  <<: *test_def
+  image: openjdk:8-jdk
