--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ buildscript {
   repositories {
     jcenter()
     mavenCentral()
+    google()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.1'
+    classpath 'com.android.tools.build:gradle:3.0.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
     // NOTE: Do not place your application dependencies here; they belong
@@ -19,9 +20,7 @@ allprojects {
   repositories {
     jcenter()
     mavenCentral()
-    maven {
-      url 'https://maven.google.com'
-    }
+    google()
   }
 
   tasks.withType(JavaCompile) {
