--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
   <application
       android:allowBackup="true"
-      android:icon="@mipmap/ic_launcher"
+      android:icon="@mipmap/ic_launcher_round"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:label="@string/app_name"
       android:theme="@style/AppTheme">
