--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.nononsenseapps.feeder">
+  xmlns:tools="http://schemas.android.com/tools"
+  package="com.nononsenseapps.feeder">
 
   <!-- Adding the feeder account, only needed up to sdk23 -->
   <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
@@ -25,9 +26,14 @@
         android:label="@string/app_name"
         android:theme="@style/FeedsTheme">
       <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
+        <action android:name="android.intent.action.MAIN" />
 
-        <category android:name="android.intent.category.LAUNCHER"/>
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+      <intent-filter tools:ignore="AppLinkUrlError">
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <data android:mimeType="vnd.android.cursor.item/vnd.nononsenseapps.feed" />
       </intent-filter>
     </activity>
     <activity
