--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,10 @@ dependencies {
   // Image loading
   implementation 'com.github.bumptech.glide:glide:3.7.0'
   implementation 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
+  // Rx
+  implementation "io.reactivex.rxjava2:rxjava:2.1.6"
+  implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  //implementation 'io.reactivex:rxkotlin:2.1.0'
   // tests
   testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
   testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
