--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,12 @@ image: openjdk:8-jdk
 
 variables:
   ANDROID_HOME: /var/lib/gitlab-runner/android
-  ANDROID_COMPILE_SDK: "25"
-  ANDROID_BUILD_TOOLS: "25.0.2"
+  ANDROID_COMPILE_SDK: "27"
+  ANDROID_BUILD_TOOLS: "27.0.1"
+
+cache:
+  paths:
+     - .gradle/
 
 .sdk_apt: &before_docker
   before_script:
@@ -22,6 +26,7 @@ variables:
                                                                mesa-utils
                                                                pciutils
       && rm -rf /var/lib/apt/lists/*
+    - export GRADLE_USER_HOME="$(pwd)/.gradle"
     - export PATH="${ANDROID_HOME}/emulator/:${ANDROID_HOME}/tools/bin/:${ANDROID_HOME}/tools/:${ANDROID_HOME}/platform-tools/:${PATH}"
     - ci/before
     - chmod +x ./gradlew
@@ -29,6 +34,7 @@ variables:
 .sdk: &before_metal
   before_script:
     - set -euo pipefail
+    - export GRADLE_USER_HOME="$(pwd)/.gradle"
     - export PATH="${ANDROID_HOME}/emulator/:${ANDROID_HOME}/tools/bin/:${ANDROID_HOME}/tools/:${ANDROID_HOME}/platform-tools/:${PATH}"
     - ci/before
     - chmod +x ./gradlew
