--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,13 +5,13 @@ stages:
 image: openjdk:8-jdk
 
 variables:
-  ANDROID_HOME: /var/lib/gitlab-runner/android
   ANDROID_COMPILE_SDK: "27"
   ANDROID_BUILD_TOOLS: "27.0.1"
 
 cache:
   paths:
      - .gradle/
+     - .androidhome/
 
 .sdk_apt: &before_docker
   before_script:
@@ -27,6 +27,7 @@ cache:
                                                                pciutils
       && rm -rf /var/lib/apt/lists/*
     - export GRADLE_USER_HOME="$(pwd)/.gradle"
+    - export ANDROID_HOME="$(pwd)/.androidhome"
     - export PATH="${ANDROID_HOME}/emulator/:${ANDROID_HOME}/tools/bin/:${ANDROID_HOME}/tools/:${ANDROID_HOME}/platform-tools/:${PATH}"
     - ci/before
     - chmod +x ./gradlew
@@ -35,6 +36,7 @@ cache:
   before_script:
     - set -euo pipefail
     - export GRADLE_USER_HOME="$(pwd)/.gradle"
+    - export ANDROID_HOME="$(pwd)/.androidhome"
     - export PATH="${ANDROID_HOME}/emulator/:${ANDROID_HOME}/tools/bin/:${ANDROID_HOME}/tools/:${ANDROID_HOME}/platform-tools/:${PATH}"
     - ci/before
     - chmod +x ./gradlew
