--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,12 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
   }
 }
 
+kotlin {
+  experimental {
+    coroutines "enable"
+  }
+}
+
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
@@ -96,10 +102,10 @@ dependencies {
   // Image loading
   implementation 'com.github.bumptech.glide:glide:3.7.0'
   implementation 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
-  // Rx
-  implementation "io.reactivex.rxjava2:rxjava:2.1.6"
-  implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-  //implementation 'io.reactivex:rxkotlin:2.1.0'
+  // Coroutines
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22'
+  // For doing coroutines on UI thread
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22'
   // tests
   testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
   testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
