Disable predexing in CI to make builds faster
See tip in https://circleci.com/docs/1.0/firebase-test-lab/

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ cache:
   <<: *before_docker
   stage: build
   script:
-    - ./gradlew assemble
+    - ./gradlew assemble -PdisablePreDex
   artifacts:
     paths:
     - app/build/outputs/
@@ -54,7 +54,7 @@ cache:
   <<: *before_docker
   stage: build
   script:
-    - ./gradlew check
+    - ./gradlew check -PdisablePreDex
   artifacts:
 
 .emulator_test: &emulator_def
