Also compile android test app

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,7 @@ cache:
   stage: build
   script:
     - ./gradlew assemble -PdisablePreDex
+    - ./gradlew assembleAndroidTest -PdisablePreDex
   artifacts:
     paths:
     - app/build/outputs/
