Fixed the notifications
Notifications should now behave in a sensible way, like cancelling
automatically and staying cancelled when you've dismissed them.

Also adds notification support on later Android versions where it was
entirely non-operational.

Fixes #10
Fixes #88

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,7 @@
         android:name=".ui.ReaderActivity"
         android:label="@string/app_name"
         android:parentActivityName=".ui.FeedActivity"
+      android:allowTaskReparenting="true"
         android:theme="@style/ReaderTheme">
 
       <meta-data
@@ -119,6 +120,8 @@
           android:name="android.accounts.AccountAuthenticator"
           android:resource="@xml/authenticator"/>
     </service>
+    <!-- Receiver for notification cancellations and such -->
+    <receiver android:name=".model.RssNotificationBroadcastReceiver" />
 
     <activity
         android:name=".ui.SettingsActivity"
