Fixed https compatibility on older versions of Android
Bundling Conscrypt (BoringSSL) with the app to add missing cyphers to
older versions for Android.

Fixes #113

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
 
   <application
       android:allowBackup="true"
+      android:name=".FeederApplication"
       android:icon="@mipmap/ic_launcher_round"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:label="@string/app_name"
