--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,7 +93,9 @@ dependencies {
   // JSONFeed
   implementation project(":jsonfeed-parser")
   // For better fetching
-  implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+  implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+  // For supporting missing cyphers on older platforms
+  implementation 'org.conscrypt:conscrypt-android:1.1.2'
   // Image loading
   implementation 'com.github.bumptech.glide:glide:3.7.0'
   implementation 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
