--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ kotlin {
 }
 
 dependencies {
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
   implementation 'com.android.support.constraint:constraint-layout:1.0.2'
   implementation 'com.android.support:recyclerview-v7:27.0.2'
