--- a/jsonfeed-parser/build.gradle
+++ b/jsonfeed-parser/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'kotlin'
 apply plugin: 'java-library'
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api 'com.squareup.okhttp3:okhttp:3.10.0'
     api 'com.squareup.moshi:moshi:1.5.0'
 
