--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
       android:icon="@mipmap/ic_launcher_round"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:label="@string/app_name"
+      android:usesCleartextTraffic="true"
       android:theme="@style/AppTheme">
     <activity
         android:name=".ui.FeedActivity"
