Changed to WorkManger from SyncAdapter
Also added two more sync frequency options:

- every 15 min
- every 30 min

Fixes #49

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
 
   def supportLibraryVersion = '27.1.1'
 
+  implementation "android.arch.work:work-runtime-ktx:$work_version"
+
   implementation "com.android.support.constraint:constraint-layout:1.1.1"
   implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
   implementation "com.android.support:support-v4:$supportLibraryVersion"
