--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-  buildToolsVersion '27.0.3'
+  buildToolsVersion "$build_tools_version"
 
   lintOptions {
     abortOnError true
@@ -25,7 +25,7 @@ android {
     targetSdkVersion 28
 
     // For espresso tests
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
 
   buildTypes {
@@ -44,25 +44,12 @@ android {
 
   packagingOptions {
     // Rome incorrectly bundles stuff in its jar
-    pickFirst 'rome-utils-1.7.1.jar'
+    pickFirst "rome-utils-${rome_version}.jar"
   }
 
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_7
-    targetCompatibility JavaVersion.VERSION_1_7
-  }
-}
-
-
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
-  sourceCompatibility = JavaVersion.VERSION_1_6
-  targetCompatibility = JavaVersion.VERSION_1_6
-
-  kotlinOptions {
-    jvmTarget = '1.6'
-    // 1.1 introduces JavaPlatform dependent functions and there is currently no way to enforce Java8 methods not to
-    // be used EVER so we enforce 1.0 version of the stdlib to ensure that all methods are compatible with java6
-    apiVersion = '1.0'
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
   }
 }
 
@@ -73,17 +60,16 @@ kotlin {
 }
 
 dependencies {
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
-  def supportLibraryVersion = '27.1.1'
 
   implementation "android.arch.work:work-runtime-ktx:$work_version"
 
-  implementation "com.android.support.constraint:constraint-layout:1.1.1"
-  implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
-  implementation "com.android.support:support-v4:$supportLibraryVersion"
-  implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
-  implementation "com.android.support:design:$supportLibraryVersion"
+  implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+  implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+  implementation "androidx.legacy:legacy-support-v4:$legacy_support_version"
+  implementation "androidx.appcompat:appcompat:$appcompat_version"
+  implementation "androidx.preference:preference:$preference_version"
+  implementation "com.google.android.material:material:$material_version"
+
   // To support SDK18
   implementation "com.nononsenseapps:filepicker:4.1.0"
   // Better times
@@ -92,8 +78,8 @@ dependencies {
   implementation "org.jsoup:jsoup:1.7.3"
   implementation "org.ccil.cowan.tagsoup:tagsoup:1.2.1"
   // RSS
-  implementation "com.rometools:rome:1.7.1"
-  implementation "com.rometools:rome-modules:1.7.1"
+  implementation "com.rometools:rome:$rome_version"
+  implementation "com.rometools:rome-modules:$rome_version"
   // JSONFeed
   implementation project(":jsonfeed-parser")
   // For better fetching
@@ -103,21 +89,25 @@ dependencies {
   // Image loading
   implementation "com.github.bumptech.glide:glide:3.7.0"
   implementation "com.github.bumptech.glide:okhttp3-integration:1.4.0@aar"
+
+
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   // Coroutines
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22"
   // For doing coroutines on UI thread
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22"
   // tests
-  testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+  testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
   testImplementation "junit:junit:4.12"
   testImplementation "org.mockito:mockito-core:2.13.0"
   testImplementation "io.mockk:mockk:1.7.2"
 
-  androidTestImplementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
-  androidTestImplementation "com.android.support:support-v4:$supportLibraryVersion"
-  androidTestImplementation "com.android.support:appcompat-v7:$supportLibraryVersion"
-  androidTestImplementation "com.android.support:design:$supportLibraryVersion"
+  androidTestImplementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+  androidTestImplementation "androidx.legacy:legacy-support-v4:$legacy_support_version"
+  androidTestImplementation "androidx.appcompat:appcompat:$appcompat_version"
+  androidTestImplementation "com.google.android.material:material:$material_version"
   androidTestImplementation "junit:junit:4.12"
-  androidTestImplementation "com.android.support.test:runner:1.0.2"
+  androidTestImplementation "androidx.test:runner:$test_runner_version"
+  androidTestImplementation "androidx.test:rules:$test_rules_version"
 }
