--- a/jsonfeed-parser/build.gradle
+++ b/jsonfeed-parser/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'kotlin'
 apply plugin: 'java-library'
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     api 'com.squareup.okhttp3:okhttp:3.10.0'
     api 'com.squareup.moshi:moshi:1.5.0'
 
     // tests
-    testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testImplementation 'junit:junit:4.12'
 }
