--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
   ext {
     kotlin_version = '1.2.70'
-    gradle_build_version = "3.2.0-rc03"
+    gradle_build_version = "3.2.0"
     build_tools_version = "28.0.2"
 
     androidx_version = "1.0.0"
-    work_version = '1.0.0-alpha08'
+    work_version = '1.0.0-alpha09'
     constraintlayout_version = "2.0.0-alpha2"
     recyclerview_version = "$androidx_version"
     legacy_support_version = "$androidx_version"
