Enabled vector drawables using support library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ android {
     minSdkVersion 18
     targetSdkVersion 28
 
+    vectorDrawables.useSupportLibrary = true
+
     // For espresso tests
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
