--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,11 @@
 
 buildscript {
   ext {
-    kotlin_version = '1.2.70'
+    kotlin_version = '1.3.0-rc-198'
     gradle_build_version = "3.2.0"
     build_tools_version = "28.0.2"
 
-    coroutines_version = "0.25.0"
+    coroutines_version = "1.0.0-RC1"
 
     androidx_version = "1.0.0"
     work_version = '1.0.0-alpha09'
