Added espresso tests for edit activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,7 +100,7 @@ dependencies {
   // JSONFeed
   implementation project(":jsonfeed-parser")
   // For better fetching
-  implementation "com.squareup.okhttp3:okhttp:3.10.0"
+  implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
   // For supporting missing cyphers on older platforms
   implementation "org.conscrypt:conscrypt-android:1.1.2"
   // Image loading
@@ -119,13 +119,18 @@ dependencies {
   testImplementation "junit:junit:4.12"
   testImplementation "org.mockito:mockito-core:2.13.0"
   testImplementation "io.mockk:mockk:1.7.2"
+  testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
 
   androidTestImplementation "androidx.recyclerview:recyclerview:$recyclerview_version"
   androidTestImplementation "androidx.legacy:legacy-support-v4:$legacy_support_version"
   androidTestImplementation "androidx.appcompat:appcompat:$appcompat_version"
   androidTestImplementation "com.google.android.material:material:$material_version"
   androidTestImplementation "junit:junit:4.12"
+  androidTestImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
   androidTestImplementation "androidx.test:runner:$test_runner_version"
   androidTestImplementation "androidx.test:rules:$test_rules_version"
   androidTestImplementation "androidx.room:room-testing:$room_version"
+  androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+  androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
+  androidTestImplementation "androidx.test.uiautomator:uiautomator:$uiautomator_version"
 }
