--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,11 @@
 
 buildscript {
   ext {
-    kotlin_version = '1.3.0-rc-198'
+    kotlin_version = '1.3.0'
     gradle_build_version = "3.2.0"
     build_tools_version = "28.0.2"
 
-    coroutines_version = "1.0.0-RC1"
+    coroutines_version = "1.0.0"
 
     okhttp_version = "3.11.0"
     androidx_version = "1.0.0"
