--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,9 +118,10 @@ dependencies {
   testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
   testImplementation "junit:junit:4.12"
   testImplementation "org.mockito:mockito-core:2.13.0"
-  testImplementation "io.mockk:mockk:1.7.2"
+  testImplementation "io.mockk:mockk:1.8.10.kotlin13"
   testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
 
+  androidTestImplementation "io.mockk:mockk-android:1.8.10.kotlin13"
   androidTestImplementation "androidx.recyclerview:recyclerview:$recyclerview_version"
   androidTestImplementation "androidx.legacy:legacy-support-v4:$legacy_support_version"
   androidTestImplementation "androidx.appcompat:appcompat:$appcompat_version"
