--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,17 @@ android {
     androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
   }
 
+  flavorDimensions "store"
+  productFlavors {
+    fdroid {
+      dimension "store"
+    }
+    play {
+      dimension "store"
+      applicationIdSuffix ".play"
+    }
+  }
+
   buildTypes {
     debug {
       minifyEnabled false
